--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -12,7 +13,7 @@
 <body>
     <!-- Replace John Doe with your name -->
 
-    <p>Hi, krish jain, I am a Kalvian.</p>
+    <p>Hi, krrish jainn, I am a Kalvian.</p>
 
 </body>
 
