--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Replace John Doe with your name -->
 
-    <p>Hi, krish jain, I am a Kalvian.</p>
+    <p>Hi, Krish jain, I am a Kalvian.</p>
 
 </body>
 
